--- a/package.json
+++ b/package.json
@@ -3,13 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "1.x",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "date-fns": "^2.18.0",
+    "formik": "^2.2.6",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.13",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-toastify": "^7.0.3",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "styled-components": "^5.2.1",
+    "web-vitals": "^1.0.1",
+    "webpack": "4.44.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
